--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
+body{
+  margin:0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.out{
+  height:100vh;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  background-color:rgb(221, 221, 221) ;
+  font-family: "Raleway",sans-serif;
+}
+
+.w-full{
+  width:100%;
+}
+
+.center{
+  height: 70vh;
+  width: 70%;
+  display:flex;
+  background-color: white;
+  justify-content: center;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  overflow:auto;
+  position: relative;
+}
+
+.student-list-container{
+  padding-top: 100px;
+}
+
+.studentContainer{
+  display: flex;
+  margin-top:10px;
+  padding-bottom:10px;
+  padding-left:20px;
+  padding-right: 20px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: rgb(221, 221, 221);
+}
+
+h3{
+  margin-top:0;
+  margin-left:20px;
+  margin-bottom:0px;
+  font-size:2rem;
+}
+
+ul{
+  list-style-type: none;
+  margin-top:5px;
+}
+
+.icon{
+  border-style:solid;
+  width:120px;
+  height:120px;
+  border-width: 1px;
+  border-color: rgb(192, 185, 185);
+  border-radius: 9999px;
+  overflow: hidden;
+  margin-right:10px;
+}
+
+.input-container{
+  position:fixed;
+  width: 100%;
+}
+
+.input-name{
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+input{
+  padding-left: 1%;
+  padding-right: 1%;
+  width: 68%;
+  padding-top:20px;
+  border-style: none;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: rgb(192, 185, 185);
+  font-size: 20px;
+  font-family: "Raleway",sans-serif;
+}
+
+input:focus{
+  outline: none;
 }
