--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,12 @@ body{
 }
 
 .center{
+  padding-top:10px;
   height: 70vh;
-  width: 70%;
+  width:80vh;
   display:flex;
   background-color: white;
   justify-content: center;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
@@ -33,16 +32,13 @@ body{
   position: relative;
 }
 
-.student-list-container{
-  padding-top: 100px;
-}
 
 .studentContainer{
   display: flex;
   margin-top:10px;
+  width: 100%;
   padding-bottom:10px;
   padding-left:20px;
-  padding-right: 20px;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-color: rgb(221, 221, 221);
@@ -72,8 +68,12 @@ ul{
 }
 
 .input-container{
-  position:fixed;
-  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: white;
+  width: 97%;
 }
 
 .input-name{
@@ -82,10 +82,11 @@ ul{
 }
 
 input{
-  padding-left: 1%;
-  padding-right: 1%;
-  width: 68%;
-  padding-top:20px;
+  width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 5px;
+  padding-top:10px;
   border-style: none;
   border-bottom-style: solid;
   border-bottom-width: 1px;
@@ -96,4 +97,45 @@ input{
 
 input:focus{
   outline: none;
+}
+
+.hidden{
+  display: none;
+}
+
+
+button{
+  margin-left: auto;
+  margin-right:50px;
+  height: 55px;
+  background: white;
+  border-style: none;
+  font-size: 2rem;
+  color:rgb(192, 185, 185);
+  display: flex;
+}
+button:hover{
+  cursor:pointer;
+}
+
+
+.tags-container{
+  margin-left: 40px;
+  margin-bottom: 20px;
+}
+
+.tag{
+  margin-right: 10px;
+  border-radius: 5px;
+  padding-left:20px;
+  padding-right:20px;
+  padding-top:5px;
+  padding-bottom: 5px;
+  background-color:rgb(192, 185, 185);
+  font-family: "Raleway",sans-serif;
+}
+
+.add_tag{
+  margin-left: 40px;
+  margin-bottom:20px;
 }
